--- a/src/styles/scss/production/base/_bs-videoplayer.scss
+++ b/src/styles/scss/production/base/_bs-videoplayer.scss
@@ -1,8 +1,10 @@
 .bs-videoplayer {
   position: relative;
   overflow: hidden;
+
   .playerWrapper {
     position: relative;
+
     >div {
       min-height: 52.8rem;
 
@@ -27,9 +29,23 @@
         }
       }
     }
+
+    iframe {
+      height: 100vh;
+
+      @include mq-below($xs) {
+        height: 82vh;
+      }
+    }
+
+    .mod-gif {
+      iframe {
+        height: 100%;
+      }
+    }
   }
 
-  .controls{
+  .controls {
     position: absolute;
     left: 10rem;
     right: 10rem;
@@ -38,7 +54,7 @@
     transition: all 0.3s ease;
     transform: translateY(150%);
 
-    @include mq-below($xs){
+    @include mq-below($xs) {
       position: unset;
     }
   }
@@ -66,8 +82,8 @@
     }
   }
 
-  &:hover{
-    .controls{
+  &:hover {
+    .controls {
       transform: translateY(0);
     }
   }
