--- a/src/styles/scss/production/module/_mod-video.scss
+++ b/src/styles/scss/production/module/_mod-video.scss
@@ -26,6 +26,16 @@
 
       @include mq-below($xs) {
         margin-bottom: 2rem;
+        padding: 0 1rem;
+      }
+
+      &.fixed-width {
+        max-width: 120rem;
+        margin: 0 auto;
+
+        @include mq-below($xs) {
+          max-width: initial;
+        }
       }
     }
 
@@ -67,11 +77,50 @@
         }
       }
     }
+
+    // &.typ-primary {
+
+    //   .bs-videoplayer {
+    //     -webkit-box-shadow: 0px 0px 23px -7px rgba(64, 197, 231, 1);
+    //     -moz-box-shadow: 0px 0px 23px -7px rgba(64, 197, 231, 1);
+    //     box-shadow: 0px 0px 23px -7px rgba(64, 197, 231, 1);
+    //   }
+
+    // }
+
+    // &.typ-secondary {
+
+    //   .bs-videoplayer {
+    //     -webkit-box-shadow: 0px 0px 23px -7px rgba(243, 144, 32, 1);
+    //     -moz-box-shadow: 0px 0px 23px -7px rgba(243, 144, 32, 1);
+    //     box-shadow: 0px 0px 23px -7px rgba(243, 144, 32, 1);
+    //   }
+
+    // }
+
+    .bs-videoplayer {
+      .playerWrapper {
+        >div {
+          height: 78vh !important;
+
+          @include mq-below($xs) {
+            height: 25rem !important;
+          }
+        }
+
+        iframe {
+          height: 100%;
+        }
+      }
+
+
+
+    }
   }
 
   &.typ-orange {
-    .playerWrapper{
-      .cm-btn-watch{
+    .playerWrapper {
+      .cm-btn-watch {
         .icon {
           color: $clr-secondary;
         }
