seo and loader added

--- a/src/styles/scss/production/style.scss
+++ b/src/styles/scss/production/style.scss
@@ -34,7 +34,7 @@
 @import "base/bs-action-fly";
 @import "base/bs-keyframe-anim";
 @import "base/bs-message-card";
-
+@import "base/_bs-loader";
 
 /* module */
 @import "module/mod-testimonial";
