--- a/src/styles/scss/production/base/_bs-action-fly.scss
+++ b/src/styles/scss/production/base/_bs-action-fly.scss
@@ -4,8 +4,8 @@
   right: 0;
   transform: translateX(70%);
   z-index: 14;
-  -webkit-transition: all .3s ease;
-  transition: all .3s ease;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   background: $clr-primary;
   max-width: 40rem;
   padding: 1.5rem 5rem 1.5rem 15rem;
@@ -14,7 +14,7 @@
   justify-content: flex-end;
   clip-path: polygon(7% 0, 100% 0, 100% 100%, 0% 100%);
   overflow: hidden;
-  @include mq-below($xs){
+  @include mq-below($xs) {
     overflow: initial;
     clip-path: none;
     padding: 1rem;
@@ -25,17 +25,16 @@
   .fly-icon-link-wrap {
     display: flex;
     align-items: center;
-    @include mq-below($xs){
+    @include mq-below($xs) {
       display: block;
     }
-    
   }
 
   .action-link {
     display: inline-flex;
     padding: 0 2rem;
     align-items: center;
-    @include mq-below($xs){
+    @include mq-below($xs) {
       display: block;
       padding: 1rem;
       align-items: center;
@@ -50,7 +49,7 @@
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
     padding: 1.8rem 1.1rem 1.1rem 4.5rem;
-    @include mq-below($xs){
+    @include mq-below($xs) {
       left: -4.5rem;
       padding: 0.5rem 1rem 0.3rem 1.6rem;
       -webkit-clip-path: polygon(15% 0, 100% 0, 100% 100%, 0% 100%);
@@ -60,7 +59,7 @@
 
   .icon {
     font-size: 3rem;
-    @include mq-below($xs){
+    @include mq-below($xs) {
       font-size: 2rem;
     }
   }
@@ -68,5 +67,46 @@
   &.active {
     -webkit-transform: translate(0);
     transform: translate(0);
+  }
+
+  &.type-phone {
+    width: 8rem;
+    height: 8rem;
+    max-width: 8rem;
+    padding: unset;
+    clip-path: none;
+    border-radius: 50%;
+    transform: none;
+    bottom: 3rem;
+    right: 3rem;
+
+    @include mq-below($xs) {
+      overflow: hidden;
+      width: 3rem;
+      height: 3rem;
+      top: 50%;
+      transform: translateY(-50%);
+      bottom: auto;
+      right: 1rem;
+    }
+
+    .icon {
+      @include mq-below($xs) {
+        font-size: 1.4rem;
+      }
+    }
+
+    .fly-trigger {
+      padding: unset;
+      width: inherit;
+      height: inherit;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: unset;
+      top: unset;
+      left: unset;
+      transform: none;
+    }
   }
 }
