--- a/src/styles/scss/production/style.scss
+++ b/src/styles/scss/production/style.scss
@@ -35,6 +35,7 @@
 @import "base/bs-keyframe-anim";
 @import "base/bs-message-card";
 @import "base/_bs-loader";
+@import "base/bs-banner-slider";
 
 /* module */
 @import "module/mod-testimonial";
